feat: Add module ID handling to Element and ModuleManager for improved module metadata management